Api routes setup

--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
-SENSOR_DATA_DB_PATH = "../sqlite/flood-predictor.db"
+
+JWT_SECRET = "234sjdflajsfajsfagwq1239fwqeff7sdf32ghdsf67048qo4"
+
+SESSION_DURATION = "2 hours"
 
 
+#ADMIN BASIC AUTH CONFIGURATION
+ADMIN_LOGIN = "admin_user"
+ADMIN_PASSWORD = "dc7068ff-3d57-4813-88f4-c3a648e0fd58"
+
+
+
+
+SENSOR_DATA_DB_PATH = "../db/flood-predictor.db"
+
+ERROR_LOG_PATH = "../var/logs/error.log"
