DB Json configuration update

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ ADMIN_PASSWORD = "dc7068ff-3d57-4813-88f4-c3a648e0fd58"
 
 
 
+SENSOR_DATA_DB_TYPE = "sqlite"
 SENSOR_DATA_DB_PATH = "../db/flood-predictor.db"
 
 ERROR_LOG_PATH = "../var/logs/error.log"
